# VioLET

./: .gitignore  .gitmodules  README.md
violet/: CMakeLists.txt  package.xml
violet/config/: plane.yaml  shuttle.yaml
violet/launch/simulation/: plane.launch.py  shuttle.launch.py
violet_autopilot/: CMakeLists.txt  package.xml
violet_autopilot/config/: config.yaml
violet_autopilot/include/violet_autopilot/: autopilot.hpp  controller.hpp  mellinger_controller.hpp  onboard_controller.hpp
violet_autopilot/launch/: violet_autopilot.launch.py
violet_autopilot/src/: autopilot.cpp  main.cpp  mellinger_controller.cpp  onboard_controller.cpp
violet_console/: CMakeLists.txt  package.xml
violet_console/include/violet_console/: console_node.hpp  console_ui.hpp
violet_console/src/: console_node.cpp  console_ui.cpp  main.cpp
violet_gazebo/: CMakeLists.txt  package.xml
violet_gazebo/launch/vehicles/: default_vehicle.launch.py  plane.launch.py  shuttle.launch.py
violet_gazebo/launch/worlds/: default_world.launch.py  helipad.launch.py
violet_gazebo/models/helipad/: model.config
violet_gazebo/models/shuttle/: model.config  shuttle.sdf.jinja
violet_gazebo/worlds/: empty.world  helipad.world
violet_gz/: CMakeLists.txt  package.xml
violet_gz/launch/: default.launch.py
violet_gz/models/shuttle/: model.config  model.sdf
violet_gz/models/shuttle/meshes/: iris_prop_cw.stl  shuttle.mtl
violet_gz/worlds/: default.sdf
violet_interface/: CMakeLists.txt  package.xml
violet_interface/config/: topics.yaml
violet_interface/include/violet_interface/: ros_node.hpp
violet_interface/launch/: violet_interface.launch.py
violet_interface/src/: main.cpp  ros_node.cpp
violet_msgs/violet_msgs/: CMakeLists.txt  package.xml
violet_msgs/violet_msgs/include/violet_msgs/: visibility_control.h
violet_msgs/violet_msgs/msg/: Battery.msg  State.msg  Status.msg  Trajectory.msg
violet_msgs/violet_msgs/srv/: Mode.srv
