<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>violet</name>
  <version>1.0.0</version>
  <description>Package that launches the entire system</description>
  <maintainer email="luis.g.abrantes@tecnico.ulisboa.pt">Luís Abrantes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Terminal UI to do basic vehicle operations -->
  <exec_depend>violet_console</exec_depend>

  <!-- Packages Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>