<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>violet_console</name>
  <version>1.0.0</version>
  <description>A terminal console control</description>
  <maintainer email="luis.g.abrantes@gmail.com">abrantess</maintainer>
  <license>MIT</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <!-- Packages Dependencies -->
 <depend>rclcpp</depend>
 <depend>nav_msgs</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_cmake_copyright</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
 
</package>
